11/10/2019, D. Khakhalov: Eclipse project - initial revision.
11/22/2019, A. Kue:  Coded the initial classes and the calculation