@@ -1,2 +1,3 @@
 11/10/2019, D. Khakhalov: Eclipse project - initial revision.
 11/22/2019, A. Kue:  Coded the initial classes and the calculation
+11/23/2019, D. Khakhalov: Added GearRatiosChart class; converted MainApp to JavaFX application.
